cp: 	PR c++/13507 	* decl.c (duplicate_decls): Use build_type_attribute_variant to 	merge attributes. testsuite: 	PR c++/13507 	* g++.dg/ext/attrib11.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@75229 138bc75d-0d04-0410-961f-82ee72b054a4