gcc/cp/decl.c
@@ -1262,10 +1262,12 @@ duplicate_decls (tree newdecl, tree olddecl)
 	 for anticipated built-ins, for exception lists, etc...  */
       else if (DECL_ANTICIPATED (olddecl))
 	{
-	  TYPE_ATTRIBUTES (TREE_TYPE (newdecl))
-	    = (*targetm.merge_type_attributes) (TREE_TYPE (olddecl),
-						TREE_TYPE (newdecl));
-	  TREE_TYPE (olddecl) = TREE_TYPE (newdecl);
+	  tree type = TREE_TYPE (newdecl);
+	  tree attribs = (*targetm.merge_type_attributes)
+	    (TREE_TYPE (olddecl), type);
+
+	  type = build_type_attribute_variant (type, attribs);
+	  TREE_TYPE (newdecl) = TREE_TYPE (olddecl) = type;
 	}
 
       /* Whether or not the builtin can throw exceptions has no
